--- a/flutter_exp_first/android/app/src/main/AndroidManifest.xml
+++ b/flutter_exp_first/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="flutter_exp_first"
+        android:label="Explorer List Mas Jamil"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
